# assistente-pessoal

./: .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  config.example.toml  mkdocs.yml  move_ui.py  pyproject.toml  refactor_gui.py  rewrite_gui.py  update_clima.py  update_gui.py
.github/workflows/: ci.yml
apps/desktop/: index.html  package-lock.json  package.json  vite.config.ts
apps/desktop/src/: App.test.tsx  App.tsx  api.ts  main.tsx  sidecar.ts  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
docs/: api.md  arquitetura.md  build-desktop.md  decisoes-tecnicas.md  ia-assistida.md  lgpd-privacidade.md  mapa-de-dados.md  primeiro-uso.md  publicacao-github.md  segredos-e-credenciais.md  seguranca-lgpd.md  uso.md
scripts/: bootstrap_windows.ps1  build_setup.ps1  build_sidecar.py  publicar_github.ps1  verificar.ps1  verificar_app.ps1
src/assistente_pessoal/: __init__.py  __main__.py  agenda_chat.py  agenda_google.py  cambio.py  cli.py  clima.py  config.py  core_datas.py  core_paths.py  dashboard_insights.py  estudos.py  fontes_noticias.py  gemini.py  gui.py  llm.py  logs.py  memoria.py  musica.py  noticias.py  painel.py  roteador.py  voz.py
src/assistente_pessoal/adapters/: __init__.py  google_calendar.py
src/assistente_pessoal/api/: __init__.py  app.py  schemas.py  server.py
src/assistente_pessoal/application/: __init__.py  privacy.py  services.py
src/assistente_pessoal/domain/: __init__.py  privacy.py
tests/: test_agenda_chat.py  test_agenda_google.py  test_api.py  test_cambio.py  test_cli.py  test_clima.py  test_config.py  test_docs.py  test_gemini.py  test_gui.py  test_llm.py  test_logs.py  test_memoria.py  test_musica.py  test_noticias.py  test_privacy.py  test_roteador.py
