[project]
name = "assistente-pessoal"
version = "0.2.0"
description = "Assistente pessoal local-first com dashboard desktop Windows."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
  { name = "Pablo Belinaso Millani" }
]
dependencies = [
  "fastapi>=0.124.0",
  "feedparser>=6.0.11",
  "faster-whisper>=1.2.1",
  "google-api-python-client>=2.186.0",
  "google-auth-httplib2>=0.2.0",
  "google-auth-oauthlib>=1.2.3",
  "httpx>=0.28.0",
  "numpy>=2.0.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.6.0",
  "rich>=14.0.0",
  "sounddevice>=0.5.0",
  "typer>=0.20.0",
  "tzdata>=2025.2",
  "uvicorn[standard]>=0.38.0",
]

[project.optional-dependencies]
dev = [
  "detect-secrets>=1.5.0",
  "mkdocs-material>=9.6.0",
  "mypy>=1.19.0",
  "pyinstaller>=6.16.0",
  "pytest>=8.0.0",
  "pytest-cov>=7.0.0",
  "respx>=0.22.0",
  "ruff>=0.14.0",
]

[project.scripts]
assistente-pessoal = "assistente_pessoal.cli:app"
assistente-pessoal-api = "assistente_pessoal.api.server:main"

[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
