[project]
name = "assistente-pessoal"
version = "0.3.2"
description = "Assistente pessoal local-first em Python com dashboard NiceGUI, memoria em SQLite e Gemini obrigatorio."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
  { name = "Pablo Belinaso Millani" }
]
dependencies = [
  "feedparser>=6.0.11",
  "google-api-python-client>=2.171.0",
  "google-auth-httplib2>=0.2.0",
  "google-auth-oauthlib>=1.2.2",
  "httpx>=0.28.0",
  "nicegui>=2.20.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.6.0",
  "rich>=14.0.0",
  "typer>=0.20.0",
  "tzdata>=2025.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.14.0",
]

[project.scripts]
assistente-pessoal = "assistente_pessoal.cli:app"

[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
docstring-code-format = true
