[package]
name = "assistente-pessoal-desktop"
version = "0.2.0"
description = "Desktop local-first do Assistente Pessoal"
authors = ["Pablo Belinaso Millani"]
edition = "2021"

[lib]
name = "assistente_pessoal_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
